kubernetes/apps/databases/dolt/app/tcproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: dolt
  namespace: databases
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dolt.68cc.io
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: network
      sectionName: mysql
  rules:
    - backendRefs:
        - name: dolt
          port: 3306
