kubernetes/apps/databases/dolt/app/tlsroute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: dolt
  namespace: databases
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dolt.68cc.io
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: network
      sectionName: mysql
  hostnames:
    - dolt.68cc.io
  rules:
    - backendRefs:
        - name: dolt
          port: 3306
